<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Night Dock</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_ringer">Ringer</string>
    <string name="pref_disable_sound">Disable Sound</string>
    <string name="pref_disable_vibrate">Disable Vibrate</string>
    <string name="pref_disable_led">Disable LED</string>
</resources>
